@@ -211,6 +211,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #17018: Make Process.join() retry if os.waitpid() fails with EINTR.
+
 - Issue #14720: sqlite3: Convert datetime microseconds correctly.
   Patch by Lowe Thiderman.
 
